ednpointy: organizator, adres
